objects/ListEmail__c.object
<CustomObject>
    <label>List Email</label>
    <nameField>
        <displayFormat>LE-{0000}</displayFormat>
        <label>List Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lists Email</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Context__c</fullName>
        <label>Context</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consumer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Lists Email</relationshipLabel>
        <relationshipName>Lists_Email</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsMapped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>shows if the record imported in technical fields is mapped in specific fields or not</description>
        <label>IsMapped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Context_2__c</fullName>
        <description>Deuxième champ de contexte alimenté par import manuel de donnée en cas de besoin de contact client (ex : problème transporteur)</description>
        <label>Context 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsArchived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSVFileName__c</fullName>
        <label>CSVFileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Infoware_Id__c</fullName>
        <externalId>true</externalId>
        <label>Infoware Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_flag__c</fullName>
        <formula>CASE(Market__c,
&quot;FR&quot;, IMAGE($CustomMetadata.Flag__mdt.FR.URL__c,&quot;France&quot;),
&quot;IT&quot;, IMAGE($CustomMetadata.Flag__mdt.IT.URL__c,&quot;Italia&quot;),
&quot;ES&quot;, IMAGE($CustomMetadata.Flag__mdt.ES.URL__c,&quot;Spain&quot;),
&quot;RU&quot;, IMAGE($CustomMetadata.Flag__mdt.RU.URL__c,&quot;Russia&quot;),
&quot;PT&quot;, IMAGE($CustomMetadata.Flag__mdt.PT.URL__c,&quot;Portugal&quot;),
&quot;GB&quot;, IMAGE($CustomMetadata.Flag__mdt.GB.URL__c,&quot;United Kingdom&quot;),
&quot;NL&quot;, IMAGE($CustomMetadata.Flag__mdt.NL.URL__c,&quot;Netherlands&quot;),
&quot;BE&quot;, IMAGE($CustomMetadata.Flag__mdt.BE.URL__c,&quot;Belgium&quot;),
&quot;GR&quot;, IMAGE($CustomMetadata.Flag__mdt.GR.URL__c,&quot;Greece&quot;),
&quot;PL&quot;, IMAGE($CustomMetadata.Flag__mdt.PL.URL__c,&quot;Poland&quot;),
&quot;SE&quot;, IMAGE($CustomMetadata.Flag__mdt.SE.URL__c,&quot;Sweden&quot;),
&quot;CH&quot;, IMAGE($CustomMetadata.Flag__mdt.CH.URL__c,&quot;Switzerland&quot;),
&quot;RO&quot;, IMAGE($CustomMetadata.Flag__mdt.RO.URL__c,&quot;Romania&quot;),
&quot;IE&quot;, IMAGE($CustomMetadata.Flag__mdt.IE.URL__c,&quot;Ireland&quot;),
&quot;DK&quot;, IMAGE($CustomMetadata.Flag__mdt.DK.URL__c,&quot;Denmark&quot;),
&quot;AT&quot;, IMAGE($CustomMetadata.Flag__mdt.AT.URL__c,&quot;Austria&quot;),
&quot;DE&quot;, IMAGE($CustomMetadata.Flag__mdt.DE.URL__c,&quot;Germany&quot;),
&quot;FI&quot;, IMAGE($CustomMetadata.Flag__mdt.FI.URL__c,&quot;Finland&quot;),
&quot;LU&quot;, IMAGE($CustomMetadata.Flag__mdt.LU.URL__c,&quot;Luxembourg&quot;),
&quot;CA&quot;, IMAGE($CustomMetadata.Flag__mdt.CA.URL__c,&quot;Canada&quot;),
&quot;US&quot;, IMAGE($CustomMetadata.Flag__mdt.US.URL__c,&quot;USA&quot;),
&quot;BR&quot;, IMAGE($CustomMetadata.Flag__mdt.BR.URL__c,&quot;Brazil&quot;),
&quot;AE&quot;, IMAGE($CustomMetadata.Flag__mdt.EA.URL__c,&quot;United Arab Emirates&quot;),
&quot;CN&quot;, IMAGE($CustomMetadata.Flag__mdt.CN.URL__c,&quot;China&quot;),
&quot;HK&quot;, IMAGE($CustomMetadata.Flag__mdt.HK.URL__c,&quot;Hong Kong&quot;),
&quot;KR&quot;, IMAGE($CustomMetadata.Flag__mdt.KR.URL__c,&quot;South Korea&quot;),
&quot;JP&quot;, IMAGE($CustomMetadata.Flag__mdt.JP.URL__c,&quot;Japan&quot;),
&quot;SG&quot;, IMAGE($CustomMetadata.Flag__mdt.SG.URL__c,&quot;Singapore&quot;),
&quot;TW&quot;, IMAGE($CustomMetadata.Flag__mdt.TW.URL__c,&quot;Taiwan&quot;),
&quot;ID&quot;, IMAGE($CustomMetadata.Flag__mdt.ID.URL__c,&quot;Indonesia&quot;),
&quot;MY&quot;, IMAGE($CustomMetadata.Flag__mdt.MY.URL__c,&quot;Malaysia&quot;),
&quot;NO&quot;, IMAGE($CustomMetadata.Flag__mdt.NO.URL__c,&quot;Norway&quot;),
&quot;AU&quot;, IMAGE($CustomMetadata.Flag__mdt.AU.URL__c,&quot;Australia&quot;),
&quot;CZ&quot;, IMAGE($CustomMetadata.Flag__mdt.CZ.URL__c,&quot;Czech Republic&quot;),
&quot;HU&quot;, IMAGE($CustomMetadata.Flag__mdt.HU.URL__c,&quot;Hungary&quot;),
&quot;SK&quot;, IMAGE($CustomMetadata.Flag__mdt.SK.URL__c,&quot;Slovakia&quot;),
&quot;INT&quot;, IMAGE($CustomMetadata.Flag__mdt.INT.URL__c,&quot;International&quot;),
IMAGE($CustomMetadata.Flag__mdt.INC.URL__c,&quot;Unknown&quot;)
)</formula>
        <label>Market flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_number__c</fullName>
        <label>Sale number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_status__c</fullName>
        <label>Import status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excel Upload</fullName>
                    <default>true</default>
                    <label>Excel Upload</label>
                </value>
                <value>
                    <fullName>Manual creation</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mass_email_title__c</fullName>
        <description>Allow the user to select a subject for mass emailing in the flow Fl : Send email to list email</description>
        <label>Mass email title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_field_1__c</fullName>
        <label>Technical field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_field_2__c</fullName>
        <label>Technical field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_field_3__c</fullName>
        <label>Technical field 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_consumer_emal__c</fullName>
        <formula>Consumer__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test consumer emal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POS_Dior_com_Purchase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POS &amp; Dior.com Purchase</label>
        <referenceTo>Sale__c</referenceTo>
        <relationshipLabel>Lists Email</relationshipLabel>
        <relationshipName>Lists_Email</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>